syntax = "proto3";

package pb;

import "tracer_type.proto";


message BaseEvent {
    string filename = 1;
    int32 line = 2;
    int64 tso = 3;
    string traceID = 4;
    TraceType type = 5;
}

message MySQLPosition {
    string name = 1;
    uint32 pos = 2;
}

message SyncerState {
    bool safeMode = 1;
    bool tryReSync = 2;
    MySQLPosition lastPos = 3;
}

message SyncerBinlogEvent {
    BaseEvent base = 1;
    SyncerState state = 2;
    int32 eventType = 3;
    int32 opType = 4;
    MySQLPosition currentPos = 5;
}

message SyncerJobEvent {
    BaseEvent base = 1;
    int32 opType = 2;
    MySQLPosition pos = 3;
    MySQLPosition currentPos = 4;
    string sql = 5;
    repeated string ddls = 6;
    string queueBucket = 7;
}
