syntax = "proto3";

package pb;

enum TraceType {
    DummyEvent = 0;
    BinlogEvent = 1;
    SyncerJob = 2;
}
